--- a/index.html
+++ b/index.html
@@ -19,29 +19,16 @@
     </script>
 
     <div id="mainContainer">
-      <div id="video-bg">
+
+    <div id="video-bg">
     <video loop="" muted="" autoplay="">
         <source src="img/byhov.mp4" type="video/mp4">
         <source src="img/byhov.webm" type="video/webm">
         <source src="img/byhov.ogv" type="video/ogg">         
     </video>
-</div>
+    </div>
 
 <nav id="burger_menu"><img id="burg_icon" src="img/burger_menu.svg" alt=""></nav>
-
-<div class="burg1">
-    <div>
-        <img src="img/close.svg" alt="">
-    </div>
-    <div id="bMenu">
-    </div>
-    <div class="social msocial">
-        <a href="#"><img src="img/s1.svg" alt=""></a>
-        <a href="#"><img src="img/s2.svg" alt=""></a>
-        <a href="#"><img src="img/s3.svg" alt=""></a>
-        <a href="#"><img src="img/s4.svg" alt=""></a>
-    </div>
-</div>
 
 <header style="margin-bottom: 20px;">
 
@@ -84,6 +71,35 @@
 <section id="eventMenu" style="margin-bottom: 20px;"></section>
 
 <nav id="footer"></nav> 
+
+<div id="social_cont">
+    <div id="social_android">
+        <a href="#"><img src="img/s1.svg" alt=""></a>
+        <a href="#"><img src="img/s2.svg" alt=""></a>
+        <a href="#"><img src="img/s3.svg" alt=""></a>
+        <a href="#"><img src="img/s4.svg" alt=""></a>
+    </div>
+    </div>
+    
+    <div id="logo_android">
+        <img id="l1" src="img/logo1.svg" alt="">
+        <img id="l2" src="img/logo2.svg" alt="">
+        <img id="l3" src="img/logo3.svg" alt="">
+    </div>
+
+<div class="burg1">
+    <div>
+        <img src="img/close.svg" alt="">
+    </div>
+    <div id="bMenu">
+    </div>
+    <div class="social msocial">
+        <a href="#"><img src="img/s1.svg" alt=""></a>
+        <a href="#"><img src="img/s2.svg" alt=""></a>
+        <a href="#"><img src="img/s3.svg" alt=""></a>
+        <a href="#"><img src="img/s4.svg" alt=""></a>
+    </div>
+</div>
 
 </div> 
 
@@ -167,6 +183,12 @@ function startres() {
         date[i].style.marginTop = '-5px';  } 
 
      }
+
+     if (w<500) { 
+        m = document.getElementsByClassName('m');
+        for (i=0; i<m.length; i++) {
+        m[i].style.height = '165px';  }   
+    }
 
 
 
